fix build dist problem

--- a/app/styles/elements/textwrap.scss
+++ b/app/styles/elements/textwrap.scss
@@ -1,5 +1,5 @@
 .bubble{
-  margin: 0 20px 0 0 !important;
+  margin: 0 20px 0 5px !important;
   background-color: #F2F2F2;
   border-radius: 5px;
   box-shadow: 0 0 6px #B2B2B2;
