Modify bubble chat box style and added isChannel flag to differentiate group chat or direct message.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,13 +3,13 @@
 // Component styles are injected through gulp
 // injector
 @import "elements/avatar";
+@import "elements/bubblebox";
 @import "elements/card";
 @import "elements/content";
 @import "elements/header";
 @import "elements/maps";
 @import "elements/nav";
 @import "elements/sidenav";
-@import "elements/textwrap";
 @import "elements/weather";
 @import "palette/_palette";
 // endinjector
