Move templates html to template directory.

--- a/app/styles/elements/bubblebox.scss
+++ b/app/styles/elements/bubblebox.scss
@@ -1,6 +1,6 @@
 @import "../color-definitions";
 .bubble{
-  margin: 0 20px 0 5px !important;
+  margin: 5px 20px 5px 5px !important;
   background-color: #F2F2F2;
   border-radius: 5px;
   display: inline-block;
