--- a/app/views/main.html
+++ b/app/views/main.html
@@ -52,6 +52,6 @@
             <div class="mdl-layout-spacer"></div>
             <i class="material-icons">location_on</i>
           </div>
-        </div>
-      </div>
+        </div>fsdfasdfdsfdasfasd
+      </div>fdsfdsfasd
     </div>
