--- a/app/templates/panel/business/business.create.html
+++ b/app/templates/panel/business/business.create.html
@@ -14,90 +14,26 @@
             <div layout="column" class="md-inline-form md-dialog-content"
                  layout-padding="">
                 <md-input-container class="md-block">
-                    <label>Meetup Name</label>
-                    <input name="name" ng-model="name" md-maxlength="30"
+                    <label>Buyer Name</label>
+                    <input name="buyerName" ng-model="buyerName"
+                           md-maxlength="30"
                            required/>
-                    <div ng-messages="eventForm.name.$error"
-                         ng-show="eventForm.name.$touched||eventForm.name.$submitted">
+                    <div ng-messages="eventForm.buyerName.$error"
+                         ng-show="eventForm.buyerName.$touched||eventForm.buyerName.$submitted">
                         <div ng-message="required">The name is required.</div>
                         <div ng-message="md-maxlength">The name has to be less
                             than 30 characters long.</div>
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
-                    <label for="meetupHost">Hoster</label>
-                    <input id="meetupHost" name="host" ng-model="host"
+                    <label>Seller Name</label>
+                    <input name="sellerName" ng-model="sellerName" md-maxlength="30"
                            required/>
-                    <div ng-messages="eventForm.host.$error">
-                        <div ng-message="required">The host name is required.</div>
-                    </div>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>Type</label>
-                    <md-select name="type" ng-model="type"
-                               required>
-                        <md-option ng-repeat="type in types"
-                                   value="{{type}}">{{type}}</md-option>
-                    </md-select>
-                    <div ng-messages="eventForm.type.$error">
-                        <div ng-message="required">The type is required
-                            .</div>
-                    </div>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>Location</label>
-                    <input name="location"
-                           ng-model="location"
-                           googleplace
-                           placeholder="Enter a Location" required>
-                    <div ng-messages="eventForm.location.$error">
-                        <div ng-message="required">The location is required.</div>
-                    </div>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>
-                        Start Date Time
-                    </label>
-                    <input name="startDateTime"
-                           ng-model="startDateTime"
-                           type="datetime-local" required/>
-                    <div ng-messages="eventForm.startDateTime.$error">
-                        <div ng-message="required">The start date time is
-                            required.
-                        </div>
-                    </div>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>
-                        End Date Time
-                    </label>
-                    <input name="endDateTime"
-                           ng-model="endDateTime"
-                           type="datetime-local" required/>
-                    <div ng-messages="eventForm.endDateTime.$error">
-                        <div ng-message="required">The end date time is
-                            required.
-                        </div>
-                    </div>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label for="meetupGuest">
-                        Guest
-                    </label>
-                    <input type="text" id="meetupGuest"
-                           ng-model="guest"/>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>
-                        Description
-                    </label>
-                        <textarea name="description"
-                                  ng-model="description"
-                                  md-maxlength="150"></textarea>
-                    <div ng-messages="eventForm.description.$error">
-                        <div ng-message="md-maxlength">
-                            Message should less then 150.
-                        </div>
+                    <div ng-messages="eventForm.sellerName.$error"
+                         ng-show="eventForm.sellerName.$touched||eventForm.sellerName.$submitted">
+                        <div ng-message="required">The name is required.</div>
+                        <div ng-message="md-maxlength">The name has to be less
+                            than 30 characters long.</div>
                     </div>
                 </md-input-container>
             </div>
