--- a/app/templates/panel/meetup/meetup.html
+++ b/app/templates/panel/meetup/meetup.html
@@ -4,7 +4,10 @@
         Meetup</md-button>
 </div>
 <div layout="row" layout-padding="" layout-margin="">
-    <md-whiteframe class="md-whiteframe-10dp"  ng-repeat="meetup in meetupCtrl.meetups">
-        {{meetup.name}}
+    <md-whiteframe class="md-whiteframe-10dp"
+                   ng-repeat="business in businessCtrl.businesses">
+        <div layout="row">{{business.name}}</div>
+        <div layout="row">{{business.type}}</div>
+        <div layout="row">{{business.location}}</div>
     </md-whiteframe>
 </div>
