--- a/app/templates/panel/profile/profile.html
+++ b/app/templates/panel/profile/profile.html
@@ -24,6 +24,11 @@
             <input required type="text" placeholder="Display Name"
                    ng-model="profileCtrl.profile.displayName"/>
           </md-input-container>
+          <md-input-container>
+            <label>Mitbbs ID</label>
+            <input required type="text" placeholder="Mitbbs ID"
+                   ng-model="profileCtrl.profile.mitbbsId"/>
+          </md-input-container>
           <md-button type="submit" class="md-raised md-primary">
             Set Display Name
           </md-button>
