--- a/app/templates/panel/business/business.html
+++ b/app/templates/panel/business/business.html
@@ -1,17 +1,10 @@
 <div layout="row" layout-padding layout-margin>
     <md-button class="md-primary md-raised"
-               ng-click="businessCtrl.showDialog($event)">
-        Add New Buyer/Supplier</md-button>
+               ng-click="businessCtrl.showDialogInventory($event)">
+        提交入库</md-button>
+    <md-button class="md-primary md-raised"
+    ng-click="businessCtrl.showDialogPaymentMethod($event)">
+    添加/修改支付方式</md-button>
 </div>
-<div layout="row" layout-padding="" layout-margin="">
-    <md-whiteframe class="md-whiteframe-10dp"
-                   ng-repeat="business in businessCtrl.businesses">
-        <div layout="row">
-            Buyer Name: {{business.buyer_name}}
-        </div>
-        <div layout="row">
-            Seller Name: {{business.seller_name}}
-        </div>
-        <md-button class="md-raised">Go To Inventory Detail</md-button>
-    </md-whiteframe>
-</div>
+<!--<div layout="row" layout-padding="" layout-margin="">-->
+<!--</div>-->
