Change the logic of business inventory to simply display a table.

--- a/app/templates/panel/business/business.html
+++ b/app/templates/panel/business/business.html
@@ -7,4 +7,14 @@
     添加/修改支付方式</md-button>
 </div>
 <!--<div layout="row" layout-padding="" layout-margin="">-->
+    <!---->
 <!--</div>-->
+<md-card>
+    <md-toolbar class="md-table-toolbar md-default">
+        <div class="md-toolbar-tools">
+            <h2 class="md-title">库存信息</h2>
+            <span flex=""></span>
+        </div>
+
+    </md-toolbar>
+</md-card>
