--- a/app/templates/panel/business/business.html
+++ b/app/templates/panel/business/business.html
@@ -5,6 +5,9 @@
     <md-button class="md-primary md-raised"
     ng-click="businessCtrl.showDialogPaymentMethod($event)">
     添加/修改支付方式</md-button>
+    <md-button class="md-primary md-raised"
+               ng-click="businessCtrl.showDialogPaymentConfirmation($event)">
+        确认已付款且以收到货物</md-button>
 </div>
 <!--<div layout="row" layout-padding="" layout-margin="">-->
     <!---->
@@ -15,6 +18,37 @@
             <h2 class="md-title">库存信息</h2>
             <span flex=""></span>
         </div>
-
     </md-toolbar>
+    <md-table-container>
+        <table md-table md-row-select multiple ng-model="selected"
+               md-progress="businessCtrl.businesses">
+            <thead md-head md-order="query.order">
+                <tr md-row>
+                    <th md-column md-order-by="mitbbsId"><span>Mitbbs ID</span></th>
+                    <th md-column md-order-by="product"><span>Product Name</span></th>
+                    <th md-column md-numeric md-order-by="price">Price</th>
+                    <th md-column md-numeric>Quantity</th>
+                    <th md-column md-numeric>Total Price</th>
+                    <th md-column>Location</th>
+                    <th md-column>Zip Code</th>
+                    <th md-column>Payment Method</th>
+                    <th md-column md-order-by="paid">Paid Confirmation</th>
+                </tr>
+            </thead>
+            <tbody md-body>
+            <tr md-row md-select="business" md-auto-select
+                ng-repeat="business in businesses | orderBy: query.order">
+                <td md-cell>{{business.mitbbsId}}</td>
+                <td md-cell>{{business.product}}</td>
+                <td md-cell>$ {{business.price  | number: 2}}</td>
+                <td md-cell>{{business.quantity}}</td>
+                <td md-cell>$ {{business.price * business.quantity | number: 2}}</td>
+                <td md-cell>{{business.location}}</td>
+                <td md-cell>{{business.zipCode}}</td>
+                <td md-cell>{{business.paymentMethod}}</td>
+                <td md-cell>{{business.paid}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </md-table-container>
 </md-card>
