--- a/app/templates/panel/business/business.html
+++ b/app/templates/panel/business/business.html
@@ -36,8 +36,9 @@
                 </tr>
             </thead>
             <tbody md-body>
-            <tr md-row md-select="business" md-auto-select
-                ng-repeat="business in businesses | orderBy: query.order">
+            <tr md-row md-select="business" md-on-select="logItem"
+                md-auto-select
+                ng-repeat="business in businesses">
                 <td md-cell>{{business.mitbbsId}}</td>
                 <td md-cell>{{business.product}}</td>
                 <td md-cell>$ {{business.price  | number: 2}}</td>
