--- a/app/templates/panel/profile/profile.html
+++ b/app/templates/panel/profile/profile.html
@@ -37,3 +37,17 @@
     </md-card-content>
   </md-card>
 </div>
+<div layout="row">
+  <md-button class="md-primary md-raised"
+  ng-click="profileCtrl.showDialogPaymentMethod($event)">
+  添加支付方式</md-button>
+  <md-card ng-repeat="method in profileCtrl.profile.paymentMethods">
+    <md-card-content>
+      <textarea ng-model="method" rows="5"></textarea>
+      <md-button ng-click="profileCtrl.updateMethod($index, method)">Update the payment
+        method</md-button>
+      <md-button ng-click="profileCtrl.deleteMethod($index)">Delete the payment
+        method</md-button>
+    </md-card-content>
+  </md-card>
+</div>
