Move the create payment method dialog to profile page

--- a/app/templates/panel/profile/profile.payment.method.html
+++ b/app/templates/panel/profile/profile.payment.method.html
@@ -16,7 +16,7 @@
               <md-input-container class="md-block">
                 <label>Payment Method</label>
                     <textarea name="paymentMethod"
-                              ng-model="paymentMethod.$value"
+                              ng-model="paymentMethod"
                               rows="5"
                               required></textarea>
                 <div ng-messages="eventForm.paymentMethod.$error"
