--- a/app/templates/panel/profile/profile.html
+++ b/app/templates/panel/profile/profile.html
@@ -47,7 +47,8 @@
     <md-card-content layout="column">
       <md-input-container class="md-block">
         <label>Paymemt Method</label>
-        <textarea ng-model="method.paymentMethods" rows="4" md-select-on-focus></textarea>
+        <textarea ng-model="method.paymentMethods" rows="5"
+                  md-select-on-focus></textarea>
       </md-input-container>
       <div layout="row">
         <md-button ng-click="profileCtrl.updateMethod(method)">Update</md-button>
