--- a/app/templates/components/auth/userauth.html
+++ b/app/templates/components/auth/userauth.html
@@ -28,6 +28,9 @@
                ng-model="authCtrl.user.password"/>
       </md-input-container>
       <div layout="row" layout-align="center center" style="padding-top:20px;">
+        <md-button aria-label="Guest Login" ng-click="authCtrl.guestLogin()" class="md-raised md-primary">
+          Guest Login
+        </md-button>
         <md-button aria-label="{{isLogin ? 'Login' : 'Register'}}" type="submit" class="md-raised md-primary">
           {{isLogin ? 'Login' : 'Register'}}
         </md-button>
