Finish added donut progress chart.

--- a/app/templates/panel/business/business.indicator.html
+++ b/app/templates/panel/business/business.indicator.html
@@ -13,11 +13,14 @@
               alignment-baseline="middle" dx="50%" dy="60%">Fulfill</text>
     </g>
     <g path-group>
-        <path class="progress-bar inner-bar normal" stroke-linejoin="round"
+        <path id="delivery" class="progress-bar inner-bar normal"
+              stroke-linejoin="round"
               delivery-path/>
-        <path class="progress-bar inner-bar normal" stroke-linejoin="round"
+        <path id="pay" class="progress-bar inner-bar normal"
+              stroke-linejoin="round"
               paid-path />
-        <path class="progress-bar outer-bar" stroke-linejoin="round"
+        <path id="general" class="progress-bar outer-bar"
+              stroke-linejoin="round"
               general-path />
     </g>
 </svg>
