--- a/app/templates/panel/business/business.html
+++ b/app/templates/panel/business/business.html
@@ -23,7 +23,10 @@
         <span>{{key}}</span>
         <indicator-donut class="widget-container"
                          expected="100"
-                         submit-count="{{value}}" paid-count="10" delivery-count="10" ></indicator-donut>
+                         submit-count="{{value}}"
+                         paid-count="{{businesses.sumP()[key]}}"
+                         delivery-count="{{businesses.sumD()[key]}}"
+        ></indicator-donut>
     </md-card>
 </div>
 
